fix: fix initial layout

--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "repository": "https://github.com/Legitpotao/etech-region-12-wbsite.git",
   "license": "MIT",
   "devDependencies": {
-    "live-server": "^1.2.1"
+    "live-server": "^1.2.1",
+    "prettier": "^2.5.1"
   },
   "scripts": {
-    "start": "live-server ."
+    "start": "live-server .",
+    "format": "prettier . --write"
   }
 }
